# EmberScript

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c
include/: builtins.h  compiler.h  interpreter.h  lexer.h  parser.h  runtime.h  utils.h  virtual_machine.h
scripts/: adventure_game.ember  campfire_story.ember  campfire_story_simple.ember  exhibit.ember  items.ember  simple.ember  simple_2.ember
src/: builtins.c  compiler.c  emberpm.c  interpreter.c  lexer.c  parser.c  runtime.c  utils.c  virtual_machine.c
tests/: test_lexer.cpp
